--- a/testpage.html
+++ b/testpage.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: /test/
-title: testpage
+permalink: /tic-tac-toe/
+title: Крестики нолики
 ---
 
 <div class="tic-tac-toe">
