--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -191,6 +191,9 @@ title: Крестики нолики
     
     /* Tic-tac-toe game
     -------------------------------------------------------------- */
+    body > div > div > main > footer > div.mdl-mini-footer__left-section > p {
+      text-align:left;
+    }
     .tic-tac-toe {
       font-family: Helvetica, Arial, sans-serif; 
       height: 300px;
