--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -194,6 +194,9 @@ title: Крестики нолики
     body > div > div > main > footer > div.mdl-mini-footer__left-section > p {
       text-align:left;
     }
+    .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+      text-align:left;
+    }
     .tic-tac-toe {
       font-family: Helvetica, Arial, sans-serif; 
       height: 300px;
