--- a/codedump.html
+++ b/codedump.html
@@ -6,7 +6,7 @@ title: Codedump
 <html>
   <head>
     <title>codedump</title>
-    <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/webtorrent.min.js"></script>
     <script>
         function postcode() {
           var client = new WebTorrent();
