--- a/codedump.html
+++ b/codedump.html
@@ -5,7 +5,7 @@ title: Codedump
 ---
 <html>
   <head>
-    <title>codedump</title>
+    <title>Codedump</title>
     <script src="{{ site.baseurl }}/assets/js/webtorrent.min.js"></script>
     <script>
         function postcode() {
