--- a/codedump.html
+++ b/codedump.html
@@ -3,6 +3,22 @@ layout: default
 permalink: /codedump/
 title: Codedump
 ---
+<script>
+        function CopyToClipboard(containerid) {
+        if (document.selection) { 
+            var range = document.body.createTextRange();
+            range.moveToElementText(document.getElementById(containerid));
+            range.select().createTextRange();
+            document.execCommand("copy"); 
+        
+        } else if (window.getSelection) {
+            var range = document.createRange();
+             range.selectNode(document.getElementById(containerid));
+             window.getSelection().addRange(range);
+             document.execCommand("copy");
+             alert("Текст скопирован") 
+        }}
+            </script>
 <html>
   <head>
     <title>Codedump</title>
@@ -11,7 +27,7 @@ title: Codedump
         function postcode() {
           var client = new WebTorrent();
           var file = new File([document.all('send').value], document.all('name').value);
-          client.seed(file, function(torrent){ document.all('deliver').innerHTML = '\nhttps://itwars.me/codedump/?' + torrent.infoHash });
+          client.seed(file, function(torrent){ document.all('deliver').innerHTML = 'Ваша ссылка: \n https://itwars.me/codedump/?' + torrent.infoHash });
         }
          function loaddoc(){
       var query = window.location.search.slice(1);
@@ -46,12 +62,18 @@ reader.readAsText(blob);
 
     <div id='deliver'></div>
     <h2 id='srcfile'></h2>
-    Ваше имя: <input type=text id='name'><br/>
-    <textarea style='width:100%;height:640px' id='send'></textarea>
-    <button onClick='postcode()' id='forkbtn'>Загрузить</button>
-    <script>
+    Название: <input type=text id='name'><br/>
+    <textarea style='width:96%;height:640px' id='send'></textarea>
+    <button class="button" onClick='postcode()' id='forkbtn'>Загрузить</button>
+    <style>
+        div#deliver {
+            padding: 1em 1em 1em 1em;
+        }
+    </style>
+<button id="button1" class="button" onclick="CopyToClipboard('deliver')">Скопировать текст</button>
 
-    </script>
+    
+
   </body>
 </html>
 
