--- a/codedump.html
+++ b/codedump.html
@@ -69,6 +69,11 @@ reader.readAsText(blob);
         div#deliver {
             padding: 1em 1em 1em 1em;
         }
+        #button1 {
+            float: right;
+            border-radius: 20px 5px 20px;
+            margin-right: 1.75em;
+        }
     </style>
 <button id="button1" class="button" onclick="CopyToClipboard('deliver')">Скопировать текст</button>
 
